--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,4 +1,6 @@
 <div class="recipes-overview">
-    <app-navigation></app-navigation>
+    <app-navigation
+        [linkList]="navigationList"
+    ></app-navigation>
     <router-outlet></router-outlet>
 </div>
